<resources>
    <string name="app_name">Lab2</string>
    <string name="action_settings">Settings</string>
    <string name="rock">ROCK</string>
    <string name="scissors">SCISSORS</string>
    <string name="paper">PAPER</string>
    <string name="please_choose_your_weapon">Please choose your weapon:</string>
    <string name="welcome_to_rock_paper_scissors">Welcome to Rock-Paper-Scissors!</string>
</resources>
